--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -15,12 +15,12 @@
 
 [[main]]
   name = "Posts"
-  url = "#posts"
+  url = "post"
   weight = 30
 
 [[main]]
   name = "Talks"
-  url = "#talks"
+  url = "talk"
   weight = 40
 
 [[main]]
