Reverted to git info off as it affects track record dates.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -24,8 +24,8 @@ copyright = "&copy; Beyond Broadcast LLP, 2003 - {year}."
 theme = "academic"
 
 # Get last modified date for content from Git?
-#enableGitInfo = false
-enableGitInfo = true
+enableGitInfo = false
+#enableGitInfo = true
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
