--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ baseurl = "/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; Beyond Broadcast LLP, 2003 - {year}."
+copyright = "&copy; Beyond Broadcast LLP (T06LL0251G), 2003 - {year}."
 
 ############################
 ## Advanced options below ##
