--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -21,12 +21,12 @@
 
 [[main]]
   name = "Posts"
-  url = "post"
+  url = "post/"
   weight = 30
 
 [[main]]
   name = "Talks"
-  url = "talk"
+  url = "talk/"
   weight = 40
 
 [[main]]
